--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "chart.js": "^4.2.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "moment": "^2.29.4",
     "nanoid": "^4.0.0",
     "next": "13.1.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
